# deep-research

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
demos/: README.md
demos/chapter_01/: README.md  main.py
docs/: ai-collaboration.md  architecture.md  roadmap.md
docs/adr/: 0001-learning-first-layered-architecture.md  README.md
docs/tasks/: chapter-01-mini-react.md
src/deep_research/: __init__.py
src/deep_research/agents/: __init__.py  prompts.py  react.py
src/deep_research/core/: __init__.py  models.py
src/deep_research/llms/: __init__.py  scripted.py
src/deep_research/tools/: __init__.py  stub_search.py
tests/: test_package.py
tests/unit/: test_react_agent.py  test_stub_search.py
