[project]
name = "deep-research-demo"
version = "0.1.0"
description = "Hands-on demos for learning Deep Research agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]

[tool.pytest.ini_options]
addopts = '--strict-markers -m "not integration"'
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services or cross-component setup",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
